# SIST_code

./: CMakeLists.txt  README.md
trans_compete/: G_x.cpp  SIDD_1R.cpp  SIDD_1R.h  SIDD_2R.cpp  SIDD_2R.h  SIDD_3R.cpp  SIDD_3R.h  SIDD_4R.cpp  SIDD_Base.cpp  SIDD_Base.h  qsidd  qsidd.cpp
trans_three/: G_x.cpp  G_x.h  SIDD_2R.cpp  SIDD_3R.cpp  SIDD_4R.cpp  SIDD_Base.cpp  SIDD_Base.h  qsidd
